--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -30,7 +30,7 @@ build:
 
 requirements:
   host:
-    - python ==${{ python_min }}
+    - python ${{ python_min }}.*
     - setuptools
     - pip
   run:
@@ -55,7 +55,7 @@ tests:
       python_version: ${{ python_min }}
   - requirements:
       run:
-        - python ==${{ python_min }}
+        - python ${{ python_min }}.*
     script:
       - check_dataset --help
       - merge_stats --help
