--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -48,7 +48,7 @@ tests:
       imports:
         - datatrove
       pip_check: true
-      python_version: ${{ python_min }}
+      python_version: ${{ python_min }}.*
   - requirements:
       run:
         - python ${{ python_min }}.*
